# RSDrop

./: Cargo.toml  README.md
src/: components.rs  controller.rs  device.rs  file_meta.rs  key_object.rs  main.rs  ui.rs  utils.rs
src/components/: fusion_label.rs
src/controller/: accepter.rs  connector.rs  discoverer.rs
src/ui/: device.rs
