[package]
name = "simp_drop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
pnet = "^0.33.0"
rsa = "^0.8.1"
rand = "^0.8.5"
base64ct = "^1.6.0"
md-5 = "^0.10.5"
log = "^0.4"
env_logger = "^0.10.0"
eframe = "^0.21.2"
